added bunch of stuff

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>First Webpack</title>
+    <title>With Bootstrap from webpack</title>
 </head>
 <body>
-    <p>blip</p>
+    <section class="container">
+        <div class="row">
+        </div>
+    </section>
 </body>
 </html>
