--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,6 +11,7 @@
         <div class="row">
         </div>
     </section>
+    <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bootstrap.bundle.js"></script>
 </body>
 </html>
