--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>blip</p>
+    <script src="dist/vendor.bundle.js"></script>
     <script src="dist/index.bundle.js"></script>
 </body>
 </html>
